formula fields were removed from uncertainty distributions